--- a/homeTask/views/book/view.ejs
+++ b/homeTask/views/book/view.ejs
@@ -15,6 +15,8 @@
         <p><%= data.desc %></p>
         <h3>Favorites :</h3>
         <p><%= data.fav %></p>
+        <h3>Watch value :</h3>
+        <p><%= data.count %></p>
     </div>
 </body>
 </html>
