--- a/PassportClassWork/views/login.ejs
+++ b/PassportClassWork/views/login.ejs
@@ -1,11 +1,11 @@
 <form action="/login" method="post">
     <div>
-        <label>Логин: </label>
-        <input type="text" name="username"> <br>
+        <label for="">Логин: </label>
+        <input type="text" name="username"><br>
     </div>
     <div>
-        <label>Пароль:</label>
-        <input type="password" name="password">
+        <label for="">Пароль: </label>
+        <input type="password" name="password"><br>
     </div>
     <div>
         <input type="submit" value="Войти">
