--- a/homeTask/views/user/login.ejs
+++ b/homeTask/views/user/login.ejs
@@ -1,17 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-</head>
-<body>
-    <form method="post">
-        <label>Имя</label><br>
-        <input type="text" name="userName"><br><br>
-        <label>Почта</label><br>
-        <input type="text" name="userEmail"><br><br>
-        <input type="submit" value="Зарегестрировать">
-    </form>
-</body>
-</html>
+<form method="post">
+    <div>
+        <label for="">Логин: </label>
+        <input type="text" name="username"><br>
+    </div>
+    <div>
+        <label for="">Пароль: </label>
+        <input type="password" name="password"><br>
+    </div>
+    <div>
+        <input type="submit" value="Войти">
+    </div>
+</form>
