--- a/homeTask/views/book/edit.ejs
+++ b/homeTask/views/book/edit.ejs
@@ -7,12 +7,18 @@
 </head>
 <body>
     <form method="post" enctype="application/x-www-form-urlencoded">
+        <label>Название книги</label><br>
+        <input type="text" name="title"><br><br>
         <label>Описание</label><br>
         <input type="text" name="desc"><br><br>
         <label>Автор</label><br>
         <input type="text" name="auth"><br><br>
         <label>Яркие моменты</label><br>
         <input type="text" name="fav"><br><br>
+        <label>Картинка файла</label><br>
+        <input type="text" name="fCover"><br><br>
+        <label>Имя файла</label><br>
+        <input type="text" name="fName"><br><br>
         <input type="submit" value="Подтвердить">
     </form>
 </body>
