--- a/homeTask/views/book/home.ejs
+++ b/homeTask/views/book/home.ejs
@@ -10,7 +10,7 @@
     <div class="welcome">
         <h1>Welcome to book home page</h1>
         <div class="welcome__create">
-            <form action="book/loader/upload">
+            <form action="/api/book/skrappa" method="get">
                 <input type="submit" value="Create" class="btn__create">
             </form>
         </div>
@@ -28,17 +28,19 @@
             <div class="display__bookList">
                 <div class="display__edit">
                     <div>
-                        <h4><%= folder[index] %></h4>
+                        <h4>
+                            <%= folder[index].title %><br>
+                            <%= folder[index].auth %><br>
+                        </h4>
                     </div>
                     <div class="display__methods">
-                        <form method="get" action=<%= `book/view/${folder[index]}`%>>
-                            
+                        <form method="get" action=<%= `/api/book/${folder[index]._id}`%>>
                             <input type="submit" value="View" class="view">
                         </form>
-                        <form method="put" action=<%= `book/${folder[index]}` %>>
+                        <form method="put" action=<%= `/api/book/edit/${folder[index]._id}` %>>
                             <input type="submit" value="Edit" class="edit">
                         </form>
-                        <form method="delete" action=<%= `book/delete/${folder[index]}`%>>
+                        <form method="delete" action=<%= `/api/book/delete/${folder[index]._id}` %>>
                             <input type="submit" value="Delete" class="delete">
                         </form>
                     </div>
