--- a/homeTask/views/book/skrappa.ejs
+++ b/homeTask/views/book/skrappa.ejs
@@ -6,7 +6,7 @@
     <title>Loader</title>
 </head>
 <body>
-    <form method="post" enctype="multipart/form-data">
+    <form method="post" enctype="application/x-www-form-urlencoded">
         <label>Название книги</label><br>
         <input type="text" name="title"><br><br>
         <label>Описание</label><br>
@@ -15,6 +15,10 @@
         <input type="text" name="auth"><br><br>
         <label>Яркие моменты</label><br>
         <input type="text" name="fav"><br><br>
+        <label>Обложка файла</label><br>
+        <input type="text" name="fCover"><br><br>
+        <label>Имя файла</label><br>
+        <input type="text" name="fName"><br><br>
         <input type="submit" value="Подтвердить">
     </form>
 </body>
